06-services/06-05-dev-docs/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ladesa-ro-dev-docs
spec:
  replicas: 2
  template:
    spec:
      imagePullSecrets:
        - name: ladesa-registry-pull-secret
      containers:
        - name: ladesa-ro-dev-docs
          image: "registry.ladesa.com.br/dev-docs:production"
