06-services/06-05-dev-docs/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ladesa-ro-dev-docs-ingress
spec:
  rules:
    - host: docs.ladesa.com.br
      http:
        paths:
          - path: /dev
            pathType: ImplementationSpecific
            backend:
              service:
                name: ladesa-ro-dev-docs
                port:
                  name: web
